--- a/Zone_Generation/Config/centroids.yaml
+++ b/Zone_Generation/Config/centroids.yaml
@@ -18,7 +18,7 @@
 #6-zone-11: [490, 664, 478, 420, 838, 513] # Street view, conscious of Twin Peaks
 #
 ## 7 zones
-#7-zone-12: [676, 479, 796, 449, 760, 493, 670] # K-8 schools + Lakeshore
+7-zone-12: [676, 479 , 796, 449, 760, 493, 670] # K-8 schools + Lakeshore
 #7-zone-13: [676, 479, 796, 449, 760, 493, 453] # K-8 schools + Harte
 #7-zone-14: [490, 664, 650, 478, 539, 513, 867] # Vertical stack, pick largest A
 #7-zone-15: [490, 664, 650, 420, 539, 513, 867] # Vertical stack, pick largest B
@@ -48,7 +48,7 @@
 ######
 ##
 #### 9 zones
-##9-zone-1: [848, 481, 735, 513, 562, 816, 680, 539, 488]
+9-zone-1: [848, 481, 735, 513, 562, 816, 680, 539, 488]
 ##
 #### 12 zones
 ##12-zone-1: [413, 525, 562, 650, 497, 625, 867, 746, 862, 544, 478, 603]
