--- a/Zone_Generation/Config/config.yaml
+++ b/Zone_Generation/Config/config.yaml
@@ -1,6 +1,8 @@
 
 # changing levers
-centroids_type: '20-zone-1'
+#centroids_type: '9-zone-west'
+centroids_type: '7-zone-1'
+
 frl_dev: 1
 racial_dev: 1
 include_k8: False
@@ -8,12 +10,12 @@ include_k8: False
 # fixed levers
 boundary_threshold: .05
 shortage: 0.3 # this is in percentage
-overage: 0.3 # this is in percentage
+overage: 0.5 # this is in percentage
 all_cap_shortage: -1 # this is in percentage
 population_type: "All"
-max_distance: 1.28 # best valid value for 59 zines: 1.272
+max_distance: -1 # best valid value for 59 zines: 1.272
 population_dev: -1
-path: "/Users/mobin/SFUSD/Visualization_Tool_Data/"
+path: "/Users/mobin/SFUSD/Visualization_Tool_Data/Rec_Zones/"
 
 
 #capacity_vicinity: 0.005
