setting up LLM API calls for Claude and chatgpt, and LLM prompt added to api_calls.py.

--- a/Zone_Generation/Config/centroids.yaml
+++ b/Zone_Generation/Config/centroids.yaml
@@ -7,8 +7,8 @@
 4-zone-1: [614, ]
 #3-zone-0: [676, 449, 493] # K-8 Schools
 #
-#6-zone-1: [676, 479, 796, 449, 760, 493] # K-8 Schools
-#6-zone-2: [513, 539, 478, 680, 490, 664] # 2 across, 3 vertical, pick largest
+6-zone-1: [676, 479, 796, 449, 760, 493] # K-8 Schools
+6-zone-2: [513, 539, 478, 680, 490, 664] # 2 across, 3 vertical, pick largest
 #6-zone-3: [513, 488, 644, 848, 790, 723] # 2 across, 3 vertical, pick central
 #6-zone-4: [481, 575, 420, 718, 525, 823] # Vertical stack, pick central
 #6-zone-5: [490, 664, 650, 478, 513, 453] # Vertical stack, pick largest B
@@ -111,13 +111,13 @@
 57-zone-1: [413, 420, 435, 453, 456, 478, 481, 488, 490, 497, 505, 507, 513, 521, 525, 539, 544, 549, 562, 569, 575, 589, 593, 603, 614, 625, 644, 650, 656, 664, 670, 680, 691, 718, 722, 729, 735, 746, 750, 782, 786, 790, 801, 816, 820, 823, 830, 834, 838, 842, 848, 859, 862, 867, 872, 876, 999]
 
 
-59-zone-1: [664, 521, 420, 435, 497, 453, 456, 848, 593,
-            544, 481, 488, 490, 729, 505, 507, 718, 513,
-            750, 525, 575, 539, 999, 549, 562, 569, 589,
-            862, 603, 614, 625, 638, 644, 650, 656, 413,
-            670, 782, 680, 691, 723, 722, 735, 746, 872,
-            786, 790, 801, 823, 816, 820, 830, 834, 838,
-            842, 859, 478, 867, 876]
+59-zone: [664, 521, 420, 435, 497, 453, 456, 848, 593,
+            481, 488, 790, 490, 729, 505, 816, 513,
+            549, 750, 525, 575, 539, 999, 562, 569, 589,
+            862, 614, 625, 638, 644, 650, 656, 413, 718,
+            670, 782, 801, 691, 834, 723, 722, 735, 746, 872,
+            507, 786,  820, 830, 838, 544, 823, 680,
+            842, 859, 478, 867, 876, 603]
 
 
 
