--- a/Zone_Generation/Config/config.yaml
+++ b/Zone_Generation/Config/config.yaml
@@ -1,7 +1,7 @@
 
 # changing levers
 #centroids_type: '9-zone-west'
-centroids_type: '5-zone-2'
+centroids_type: '6-zone-2'
 
 frl_dev: 1
 racial_dev: 1
@@ -22,7 +22,9 @@ drop_optout: True
 capacity_scenario: "A"
 new_schools: True
 include_k8: False
-level: 'Block' # 'Block', 'BlockGroup' or 'attendance_area'
+# 'Block', 'BlockGroup' or 'attendance_area'
+level: "attendance_area"
+
 #capacity_vicinity: 0.005
 #fixed_vicinity: 0.12
 
