--- a/Zone_Generation/Config/config.yaml
+++ b/Zone_Generation/Config/config.yaml
@@ -10,9 +10,9 @@ racial_dev: 1
 boundary_threshold: .05
 shortage: 0.3 # this is in percentage
 overage: 0.5 # this is in percentage
-all_cap_shortage: -1 # this is in percentage
-max_distance: -1 # best valid value for 59 zines: 1.272
-population_dev: -1
+all_cap_shortage: .inf # this is in percentage
+max_distance: .inf # best valid value for 59 zines: 1.272
+population_dev: .inf
 path: "/Users/mobin/SFUSD/Visualization_Tool_Data/AA_Zones/"
 
 
